--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
   
   <div class="pagination">
     
-    <a href="/blog/archives">Blog Archives</a>
+    <a href="/blog/archives">文章列表</a>
     
   </div>
 </div>
